--- a/full-app/frontend/package.json
+++ b/full-app/frontend/package.json
@@ -23,6 +23,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-scripts": "^5.0.1",
