--- a/full-app/frontend/package.json
+++ b/full-app/frontend/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@nivo/bar": "^0.99.0",
