--- a/full-app/frontend/package.json
+++ b/full-app/frontend/package.json
@@ -10,7 +10,7 @@
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
+    "@mui/material": "^7.3.2",
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@testing-library/dom": "^10.4.1",
@@ -24,14 +24,19 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "date-fns": "^4.1.0",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.2",
+    "lucide-react": "^0.544.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3",
+    "recharts": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
