--- a/full-app/frontend/package.json
+++ b/full-app/frontend/package.json
@@ -13,30 +13,46 @@
     "@mui/material": "^7.3.2",
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^5.3.3",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "echarts": "^6.0.0",
+    "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.544.0",
+    "mqtt": "^5.14.1",
     "papaparse": "^5.5.3",
-    "react": "^19.1.1",
+    "postcss": "^8.5.6",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^18.3.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^7.8.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3",
     "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
