--- a/full-app/frontend/package.json
+++ b/full-app/frontend/package.json
@@ -53,6 +53,7 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
