--- a/full-app/frontend/package.json
+++ b/full-app/frontend/package.json
@@ -39,6 +39,8 @@
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "mqtt": "^5.14.1",
     "papaparse": "^5.5.3",
